# Senku

./: Base_cuadrada.cpp  Base_cuadrada.h  Base_tablero.cpp  Base_tablero.h  Base_triangular.cpp  Base_triangular.h  CMakeLists.txt  Estilos.cpp  Estilos.h  Funciones.cpp  Funciones.h  Juego.cpp  Juego.h  Tipos.h  main.cpp
